--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,27 +5,48 @@
     <title>BikeCatalog</title>
 
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" />
-
-    <script th:src="@{/webjars/jquery/3.7.1/jquery.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">BikeCatalog</a>
+            <a class="navbar-brand" href="/">BikeCatalog</a>
         </div>
     </nav>
-    <h1 class="text-center">Bikes:</h1>
+
     <div class="container">
+        <h1 class="text-center">Bikes:</h1>
+
         <div class="row gx-3 gy-3">
             <div th:each="bike : ${bikes}" class="col-12 col-sm-6 col-md-4 col-lg-3" >
                 <div class="card">
+                    <img th:src="@{/images/bike.png}" class="card-img-top p-3" alt="Bike Image">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${bike.name}" />
                     </div>
                 </div>
             </div>
         </div>
+
+        <nav aria-label="Page navigation" class="m-3">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:class="${pageNumber <= 0} ? 'disabled' : ''">
+                    <a class="page-link" th:href="@{/(pageNumber=${pageNumber - 1})}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li th:each="i : ${#numbers.sequence(0, totalPages - 1)}" class="page-item" th:class="${pageNumber == i} ? 'active' : ''">
+                    <a class="page-link" th:href="@{/(pageNumber=${i})}" th:text="${i + 1}"></a>
+                </li>
+                <li class="page-item" th:class="${pageNumber >= totalPages - 1} ? 'disabled' : ''">
+                    <a class="page-link" th:href="@{/(pageNumber=${pageNumber + 1})}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
+
+    <script th:src="@{/webjars/jquery/3.7.1/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
 </body>
 </html>
