--- a/src/main/resources/templates/bike/index.html
+++ b/src/main/resources/templates/bike/index.html
@@ -5,6 +5,7 @@
     <title>BikeCatalog</title>
 
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.4.2/css/all.min.css}" />
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
@@ -22,6 +23,7 @@
                     <img th:src="@{/images/bike.png}" class="card-img-top p-3" alt="Bike Image">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${bike.name}" />
+                        <a th:href="@{/bike/{id}(id = ${bike.id})}" class="btn btn-primary">Show</a>
                     </div>
                 </div>
             </div>
