--- a/src/main/resources/templates/bike/index.html
+++ b/src/main/resources/templates/bike/index.html
@@ -23,6 +23,8 @@
                     <img th:src="@{/images/bike.png}" class="card-img-top p-3" alt="Bike Image">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${bike.name}" />
+                        <h6 class="card-subtitle text-body-secondary" th:text="${bike.brand} != null ? ${bike.brand.name} : 'No brand'" />
+                        <h6 class="card-subtitle text-body-secondary mb-2" th:text="${bike.category} != null ? ${bike.category.name} : 'No category'" />
                         <a th:href="@{/bike/{id}(id = ${bike.id})}" class="btn btn-primary">Show</a>
                     </div>
                 </div>
