admin panel for manage categories

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -18,6 +18,7 @@
     <h1>Admin Panel:</h1>
     <div class="list-group">
         <a th:href="@{/admin/brands}" class="list-group-item list-group-item-action">Brands</a>
+        <a th:href="@{/admin/categories}" class="list-group-item list-group-item-action">Categories</a>
     </div>
 </div>
 
