admin panel for manage bikes

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -17,6 +17,7 @@
 <div class="container">
     <h1>Admin Panel:</h1>
     <div class="list-group">
+        <a th:href="@{/admin/bikes}" class="list-group-item list-group-item-action">Bikes</a>
         <a th:href="@{/admin/brands}" class="list-group-item list-group-item-action">Brands</a>
         <a th:href="@{/admin/categories}" class="list-group-item list-group-item-action">Categories</a>
     </div>
