--- a/src/main/resources/templates/bike/show.html
+++ b/src/main/resources/templates/bike/show.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.4.2/css/all.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/main.css}" />
 
     <script th:inline="javascript">
         /*<![CDATA[*/
@@ -34,6 +35,7 @@
         </h1>
         <h5>Brand: <span th:text="${brand} != null ? ${brand} : 'No brand'" /></h5>
         <h5>Category: <span th:text="${category} != null ? ${category} : 'No category'" /></h5>
+        <img class="img-thumbnail img-bike" th:src="${bike.thumbnail} != null ? @{/thumbnails/{thumbnail}(thumbnail = ${bike.thumbnail})} : @{/images/bike.png}" alt="Bike Image">
         <p th:text="${bike.content}" />
     </div>
 
