--- a/src/main/resources/templates/admin/bike/form.html
+++ b/src/main/resources/templates/admin/bike/form.html
@@ -81,5 +81,15 @@
 
 <script th:src="@{/webjars/jquery/3.7.1/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
+<script th:src="@{/webjars/ckeditor/31.0.0/classic/ckeditor.js}"></script>
+<script>
+    ClassicEditor
+        .create( document.querySelector( '#contentInput' ), {
+            removePlugins: ['CKFinderUploadAdapter', 'CKFinder', 'EasyImage', 'Image', 'ImageCaption', 'ImageStyle', 'ImageToolbar', 'ImageUpload', 'MediaEmbed'],
+        } )
+        .catch( error => {
+            console.error( error );
+        } );
+</script>
 </body>
 </html>
