--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,14 @@
+body {
+    min-height: 100vh;
+    margin:0;
+    display:flex;
+    flex-direction:column;
+}
+
+main {
+    flex: 1
+}
+
 .img-bike-card {
     width: 100%;
     height: 25vh;
