--- a/src/main/resources/templates/admin/category/form.html
+++ b/src/main/resources/templates/admin/category/form.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>BikeCatalog</title>
-
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.4.2/css/all.min.css}" />
-</head>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <body>
-<nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">BikeCatalog</a>
-    </div>
-</nav>
 
-<div class="container">
+<th:block layout:fragment="page-content">
     <h1>
         <a class="icon-link" style="text-decoration: none;" th:href="@{/admin/categories}">
             <i class="fa-solid fa-left-long"></i>
@@ -40,9 +28,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
-</div>
+</th:block>
 
-<script th:src="@{/webjars/jquery/3.7.1/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
 </body>
 </html>
