--- a/src/main/resources/templates/bike/index.html
+++ b/src/main/resources/templates/bike/index.html
@@ -1,57 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>BikeCatalog</title>
-
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.4.2/css/all.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/main.css}" />
-</head>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">BikeCatalog</a>
-        </div>
-    </nav>
 
-    <div class="container">
-        <h1 class="text-center">Bikes:</h1>
+<th:block layout:fragment="page-content">
+    <h1 class="text-center">Bikes:</h1>
 
-        <div class="row gx-3 gy-3">
-            <div th:each="bike : ${bikes}" class="col-12 col-sm-6 col-md-4 col-lg-3" >
-                <div class="card">
-                    <img th:src="${bike.thumbnail} != null ? @{/thumbnails/{thumbnail}(thumbnail = ${bike.thumbnail})} : @{/images/bike.png}" class="card-img-top p-3 img-bike-card" alt="Bike Image">
-                    <div class="card-body">
-                        <h5 class="card-title" th:text="${bike.name}" />
-                        <h6 class="card-subtitle text-body-secondary" th:text="${bike.brand} != null ? ${bike.brand.name} : 'No brand'" />
-                        <h6 class="card-subtitle text-body-secondary mb-2" th:text="${bike.category} != null ? ${bike.category.name} : 'No category'" />
-                        <a th:href="@{/bike/{id}(id = ${bike.id})}" class="btn btn-primary">Show</a>
-                    </div>
+    <div class="row gx-3 gy-3">
+        <div th:each="bike : ${bikes}" class="col-12 col-sm-6 col-md-4 col-lg-3" >
+            <div class="card">
+                <img th:src="${!#strings.isEmpty(bike.thumbnail)} ? @{/thumbnails/{thumbnail}(thumbnail = ${bike.thumbnail})} : @{/images/bike.png}" class="card-img-top p-3 img-bike-card" alt="Bike Image">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${bike.name}" />
+                    <h6 class="card-subtitle text-body-secondary" th:text="${bike.brand} != null ? ${bike.brand.name} : 'No brand'" />
+                    <h6 class="card-subtitle text-body-secondary mb-2" th:text="${bike.category} != null ? ${bike.category.name} : 'No category'" />
+                    <a th:href="@{/bike/{id}(id = ${bike.id})}" class="btn btn-primary">Show</a>
                 </div>
             </div>
         </div>
-
-        <nav aria-label="Page navigation" class="m-3">
-            <ul class="pagination justify-content-center">
-                <li class="page-item" th:class="${pageNumber <= 0} ? 'disabled' : ''">
-                    <a class="page-link" th:href="@{/(pageNumber=${pageNumber - 1})}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li th:each="i : ${#numbers.sequence(0, totalPages - 1)}" class="page-item" th:class="${pageNumber == i} ? 'active' : ''">
-                    <a class="page-link" th:href="@{/(pageNumber=${i})}" th:text="${i + 1}"></a>
-                </li>
-                <li class="page-item" th:class="${pageNumber >= totalPages - 1} ? 'disabled' : ''">
-                    <a class="page-link" th:href="@{/(pageNumber=${pageNumber + 1})}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
     </div>
 
-    <script th:src="@{/webjars/jquery/3.7.1/jquery.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
+    <nav aria-label="Page navigation" class="m-3">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:class="${pageNumber <= 0} ? 'disabled' : ''">
+                <a class="page-link" th:href="@{/(pageNumber=${pageNumber - 1})}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li th:each="i : ${#numbers.sequence(0, totalPages - 1)}" class="page-item" th:class="${pageNumber == i} ? 'active' : ''">
+                <a class="page-link" th:href="@{/(pageNumber=${i})}" th:text="${i + 1}"></a>
+            </li>
+            <li class="page-item" th:class="${pageNumber >= totalPages - 1} ? 'disabled' : ''">
+                <a class="page-link" th:href="@{/(pageNumber=${pageNumber + 1})}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</th:block>
+
 </body>
 </html>
